chore(backend): standardize import formatting and update configuration
Application:
- backend

Files Modified:
- backend/.env.example - Added JWT_TEMPORARY_EXPIRATION example
- backend/pom.xml - Simplified project name and description
- backend/src/main/java/com/zentro/ZentroApplication.java - Updated author from "Zentro Team" to "Aman Singh"
- backend/src/main/java/com/zentro/common/config/CorsConfig.java - Replaced Arrays.asList with List.of, changed setAllowedOrigins to setAllowedOriginPatterns
- backend/src/main/java/com/zentro/common/config/SecurityConfig.java - Restricted /actuator/** to authenticated users, made /actuator/health public
- backend/src/main/java/com/zentro/config/EnvironmentConfig.java - Simplified class description comment
- backend/src/main/java/com/zentro/feature/auth/entity/User.java - Added TODO comments for future entity relationships
- All Java files - Added blank lines between import groups (jakarta, lombok, org.springframework, etc.) for better readability